--- a/notebooks/average_causal_effects.ipynb
+++ b/notebooks/average_causal_effects.ipynb
@@ -15,8 +15,9 @@
       "source": [
         "In this notebook we run the causal tracing program, safe the results and plot the average causal effects for better visualization of the effects as well as the causal effects with isolated / frozen MLP modules\n",
         "\n",
-        "Model here is: gpt2-medium\n",
-        "Average over the forst 100 factual associations in the dataset knowns instead of all 1209 to safe some processing time"
+        "Model here is: gpt2-medium fine tuned for math\n",
+        "\n",
+        "Average over the first 100 math prompts"
       ],
       "metadata": {
         "id": "ms1SatZ_ENpN"
@@ -62,10 +63,10 @@
       ],
       "metadata": {
         "id": "OipnOayVAvKu",
-        "outputId": "34750f8c-5b81-4f80-d565-c42a0b9710bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "34750f8c-5b81-4f80-d565-c42a0b9710bc"
       },
       "id": "OipnOayVAvKu",
       "execution_count": 9,
@@ -376,11 +377,11 @@
         "#!mv intermediate_results_gpt2-medium-math.zip /content/drive/MyDrive/\n"
       ],
       "metadata": {
-        "id": "SN6jDx9OWf9p",
-        "outputId": "a2278c99-37f5-4b6b-f14a-901869b23f69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SN6jDx9OWf9p",
+        "outputId": "a2278c99-37f5-4b6b-f14a-901869b23f69"
       },
       "id": "SN6jDx9OWf9p",
       "execution_count": 6,
